--- a/src/main/webapp/app/scripts/inbox/inbox.html
+++ b/src/main/webapp/app/scripts/inbox/inbox.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Inbox">
     <ion-content>
         <div class="bar bar-header">
-            <div class="h1 title">Notifications</div>
+            <div class="h1 title"></div>
             <button ng-if="!isRemoveAllEnabled" class="button button-assertive icon ion-close-circled"
                     ng-click="enableRemoveAll()"></button>
             <button ng-if="isRemoveAllEnabled" class="button button-assertive" ng-click="removeAll()">Remove all
