--- a/src/main/webapp/app/scripts/history/history.html
+++ b/src/main/webapp/app/scripts/history/history.html
@@ -18,7 +18,8 @@
                 <div class="item item-icon-left">
                     <i ng-class="{'icon ion-android-warning orange' :n.ackType=='ack1',
                             'icon ion-android-warning yellow':n.ackType=='ack2',
-                            'icon ion-alert red':n.ackType=='ack3'}"></i>
+                            'icon ion-alert red':n.ackType=='ack3',
+                            'icon ion-flag red':n.ackType=='ack4'}"></i>
                     <b>{{n.stationName}} Box: {{n.bayNumber}}</b> -
                     {{n.description}}
                     <span ng-if="n.timestamp" class="item-note item-note-zero"> <b>Date:</b> {{n.timestamp | date:'yyyy-MM-dd
