--- a/src/main/webapp/app/scripts/home/home.html
+++ b/src/main/webapp/app/scripts/home/home.html
@@ -13,7 +13,7 @@
                                 <i class="icon ion-ios-pulse"></i>
                                 <span class="card-header-zero">{{stationName}}</span>
                                 <button class="button icon ion-android-globe blue" style="padding-bottom: 15px;"
-                                        ng-click="openVnc()">
+                                        ng-click="openVnc(bays[$index].ipAddress)">
                                 </button>
 
                             </div>
@@ -22,7 +22,8 @@
                                 <div ng-if="bay.bayNumber">
                                     <i ng-class="getBackgroundColor(bay.stateInfo.type)"></i>
                                     <p class="item-text-wrap"><b>Box: {{bay.bayNumber}}</b>
-                                        <b>State: </b>{{bay.stateInfo.stateCode}} - {{bay.stateInfo.stateDescription}}</p>
+                                        <b>State: </b>{{bay.stateInfo.stateCode}} - {{bay.stateInfo.stateDescription}} <b>Date: </b>
+                                        {{bay.stateInfo.timestamp | date:'yyyy-MM-dd HH:mm:ss'}}</p>
                                 </div>
                             </div>
                         </div>
