--- a/src/main/webapp/app/scripts/inbox/inbox.html
+++ b/src/main/webapp/app/scripts/inbox/inbox.html
@@ -14,7 +14,8 @@
                 <div class="item-icon-left" style="padding-bottom: 16px">
                     <i ng-class="{'icon ion-android-warning orange' :value.ackType=='ack1',
                             'icon ion-android-warning yellow':value.ackType=='ack2',
-                            'icon ion-alert red':value.ackType=='ack3'}"></i>
+                            'icon ion-alert red':value.ackType=='ack3',
+                            'icon ion-flag red':value.ackType=='ack4'}"></i>
                     <b>{{value.stationName}} Box: {{value.bayNumber}}</b> -
                     {{value.description}}
                     <span ng-if="value.timestamp" class="item-note item-note-zero"> <b>Date:</b>
