Added functionality in Mobile to manage feedback acknowledges. Added management of counter ack3.

--- a/src/main/webapp/app/scripts/home/home.html
+++ b/src/main/webapp/app/scripts/home/home.html
@@ -21,9 +21,9 @@
                                  style="border-style: none;">
                                 <div ng-if="bay.bayNumber">
                                     <i ng-class="getBackgroundColor(bay.stateInfo.type)"></i>
+                                    <p class="item-text-wrap">{{bay.stateInfo.timestamp | date:'yyyy-MM-dd HH:mm:ss'}}</p>
                                     <p class="item-text-wrap"><b>Box: {{bay.bayNumber}}</b>
-                                        <b>State: </b>{{bay.stateInfo.stateCode}} - {{bay.stateInfo.stateDescription}} <b>Date: </b>
-                                        {{bay.stateInfo.timestamp | date:'yyyy-MM-dd HH:mm:ss'}}</p>
+                                        <b>State: </b>{{bay.stateInfo.stateCode}} - {{bay.stateInfo.stateDescription}}</p>
                                 </div>
                             </div>
                         </div>
