--- a/src/main/mobile/app/scripts/inbox/inbox.html
+++ b/src/main/mobile/app/scripts/inbox/inbox.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Inbox">
-    <ion-content>
+    <ion-content  overflow-scroll=”true”>
         <div class="bar bar-header">
             <div class="h1 title"></div>
             <button ng-if="!isRemoveAllEnabled" class="button button-assertive icon ion-close-circled"
