--- a/src/main/mobile/app/scripts/history/history.html
+++ b/src/main/mobile/app/scripts/history/history.html
@@ -1,4 +1,4 @@
-<ion-view view-title="History">
+<ion-view view-title="History" overflow-scroll=”true”>
     <ion-content>
         <ion-item>
             <label class="item item-input item-select">
@@ -12,8 +12,9 @@
                 </select>
             </label>
         </ion-item>
-
-        <ion-list class="list">
+        <ion-refresher on-refresh="loadMore()" spinner="android" ></ion-refresher>
+        <ion-spinner icon="android" class="spinner-zero" ng-if="!isDataArrived"></ion-spinner>
+        <ion-list class="list" ng-if="isDataArrived">
             <ion-item class="item item-divider item-text-wrap" ng-repeat="n in notifications|filter:search">
                 <div class="item item-icon-left">
                     <i ng-class="{'icon ion-android-warning orange' :n.ackType=='ack1',
@@ -22,13 +23,16 @@
                             'icon ion-flag red':n.ackType=='ack4'}"></i>
                     <b>{{n.stationName}} Box: {{n.bayNumber}}</b> -
                     {{n.description}}
-                    <span ng-if="n.timestamp" class="item-note item-note-zero"> <b>Date:</b> {{n.timestamp | date:'yyyy-MM-dd
-                            HH:mm:ss'}}</span>
+                    <span ng-if="n.timestamp" class="item-note item-note-zero"> <b>Date:</b> {{n.timestamp | date:'yyyy-MM-dd HH:mm:ss'}}</span>
                 </div>
             </ion-item>
         </ion-list>
-        <ion-infinite-scroll
-                on-infinite="loadMore()">
-        </ion-infinite-scroll>
     </ion-content>
+    <div class="float-button" ng-show="sttButton" ng-click="scrollTop()">
+        <span class="height-fix">
+             <a class="content">
+                <i class="ion-ios-arrow-up"> </i>
+            </a>
+        </span>
+    </div>
 </ion-view>
