--- a/src/main/mobile/app/scripts/menu/menu.html
+++ b/src/main/mobile/app/scripts/menu/menu.html
@@ -1,7 +1,7 @@
 <ion-side-menus enable-menu-with-back-views="true">
     <ion-side-menu-content
             edge-drag-threshold="true">
-        <ion-nav-bar class="bar-positive">
+        <ion-nav-bar class="bar-positive" ng-click="scrollTop()">
             <ion-nav-back-button>
             </ion-nav-back-button>
 
