mobile Background mode. Last item is now visible.

--- a/src/main/mobile/app/scripts/home/home.html
+++ b/src/main/mobile/app/scripts/home/home.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Home" padding="true">
-    <ion-content>
+    <ion-content class="scroll-content has-footer" overflow-scroll="true">
         <section>
             <div class="item img-center">
                 <img ng-src="./images/xhdpi/Whirlpool.jpg" class="img-logo"/>
