--- a/src/main/mobile/app/scripts/dashboard/dashboard.html
+++ b/src/main/mobile/app/scripts/dashboard/dashboard.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Dashboard">
-    <ion-content>
+    <ion-content class="scroll-content has-footer" overflow-scroll="true">
         <ion-item id="dashboard-header" class="row header">
             <div class="col col-34"><b>Measure</b></div>
             <div class="col col-20"><b>Value</b></div>
