--- a/src/main/mobile/app/scripts/history/history.html
+++ b/src/main/mobile/app/scripts/history/history.html
@@ -1,38 +1,42 @@
-<ion-view view-title="History" overflow-scroll=”true”>
-    <ion-content>
-        <ion-item>
-            <label class="item item-input item-select">
+<ion-view view-title="History">
+    <ion-content overflow-scroll=”true” scrollbar-y="true" class="scroll-content has-footer">
+        <ion-scroll>
+            <ion-item>
+                <label class="item item-input item-select">
 
-                Filter by
+                    Filter by
 
-                <select name="filter" id="filter"
-                        ng-model="filter"
-                        ng-options="stationBay.label for stationBay in stationsBays"
-                        ng-change="searchByStationBay(filter)">
-                </select>
-            </label>
-        </ion-item>
-        <ion-refresher on-refresh="loadMore()" spinner="android" ></ion-refresher>
-        <ion-spinner icon="android" class="spinner-zero" ng-if="!isDataArrived"></ion-spinner>
-        <ion-list class="list" ng-if="isDataArrived">
-            <ion-item class="item item-divider item-text-wrap" ng-repeat="n in notifications|filter:search">
-                <div class="item item-icon-left">
-                    <i ng-class="{'icon ion-android-warning orange' :n.ackType=='ack1',
+                    <select name="filter" id="filter"
+                            ng-model="filter"
+                            ng-options="stationBay.label for stationBay in stationsBays"
+                            ng-change="searchByStationBay(filter)">
+                    </select>
+                </label>
+            </ion-item>
+            <ion-refresher on-refresh="loadMore()" spinner="spiral"></ion-refresher>
+            <ion-spinner icon="android" class="spinner-zero" ng-if="!isDataArrived"></ion-spinner>
+            <ion-list can-swipe="listCanSwipe" ng-if="isDataArrived">
+                <ion-item class="item item-divider item-text-wrap" ng-repeat="n in notifications|filter:search">
+                    <div class="item-icon-left" style="padding-bottom: 16px">
+                        <i ng-class="{'icon ion-android-warning orange' :n.ackType=='ack1',
                             'icon ion-android-warning yellow':n.ackType=='ack2',
                             'icon ion-alert red':n.ackType=='ack3',
                             'icon ion-flag red':n.ackType=='ack4'}"></i>
-                    <b>{{n.stationName}} Box: {{n.bayNumber}}</b> -
-                    {{n.description}}
-                    <span ng-if="n.timestamp" class="item-note item-note-zero"> <b>Date:</b> {{n.timestamp | date:'yyyy-MM-dd HH:mm:ss'}}</span>
-                </div>
-            </ion-item>
-        </ion-list>
+                        <div class="row">
+                            <span ng-if="n.timestamp" class="item-note item-note-zero"> {{n.timestamp | date:'yyyy-MM-dd HH:mm:ss'}}</span>
+                        </div>
+                        <div class="row">
+                        <span>
+                            <span ng-if="n.stationName"><b>{{n.stationName}} Box: {{n.bayNumber}}</b> - </span>
+                            {{n.description}}
+                        </span>
+                        </div>
+                    </div>
+                    <ion-option-button ng-hide="true"
+                                       class="button-assertive icon ion-trash-a">
+                    </ion-option-button>
+                </ion-item>
+            </ion-list>
+        </ion-scroll>
     </ion-content>
-    <div class="float-button" ng-show="sttButton" ng-click="scrollTop()">
-        <span class="height-fix">
-             <a class="content">
-                <i class="ion-ios-arrow-up"> </i>
-            </a>
-        </span>
-    </div>
 </ion-view>
